--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,16 @@
     "require": {
         "php": ">5.4"
     },
+    "require-dev": {
+        "phpunit/phpunit": "4.*"
+    },
     "minimum-stability": "dev",
     "autoload": {
         "psr-4":{
-            "Andrebian\\Astronauta\\": ["src/Andrebian/Astronauta"]
+            "Andrebian\\Astronauta\\": [
+                "src/Andrebian/Astronauta", 
+                "tests/Andrebian/Astronauta"
+            ]
         }
     }
 }
